tests/type-error/cycle-detection/local/Ones.vix
type List a = Nil | Cons a (Ptr (List a))

main =
  let
    ones = Cons 1 (Ref ones)

    test = case ones of
      Cons 1 (Ref (Cons 1 (Ref (Cons 1 _)))) -> printInt 111
      _ -> printInt 222
  printInt test
